# EniPattern

./: CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: Main.cpp  level1.json  level3.json
src/Levels/: level1.tmx  level1new.json  level1p.tmx  level2.json  level2.tmx  level3.json  level3.tmx  level4.json  level4.tmx  level5.json  level5.tmx
src/Textures/: Hole.aseprite  Person 5.aseprite  Person 6.aseprite  Person.aseprite  Person2.aseprite  Person3.aseprite  Person4.aseprite  Portal Button.aseprite  Shapes.aseprite  Slidedoe.aseprite  Software Buttons.aseprite  Sprite-0001 (2).aseprite  Sprite-0001.aseprite  Sprite-0002.aseprite  Sprite-0003 (1).aseprite  Vase.aseprite  level1.tmx  level1p.tmx  level2.tmx  tilemap1.aseprite  untitled.tmx
src/include/: AI.hpp  Animation.hpp  Button.hpp  DataLoader.hpp  DisplaySettingsMenu.hpp  Door.hpp  EmptyScene.hpp  GameObject.hpp  GameScene.hpp  Goal.hpp  Level1.hpp  Level2.hpp  Level3.hpp  Level4.hpp  Level5.hpp  LevelSelection.hpp  MainMenu.hpp  Player.hpp  PushableItem.hpp  Scene.hpp  Selection.hpp  SettingsMenu.hpp  SoundSettingsMenu.hpp  StepButton.hpp  Teleporter.hpp  TilemapImporter.hpp
src/shaders/: Protanomaly.frag  Tritanopia.frag  greyscale.frag
